# Grajek

./: .gitignore  CMakeLists.txt  LICENSE  README.md  delete_save.bat
src/: CMakeLists.txt  main.cpp
src/include/: Game.h  GloomEngine.h  ProjectSettings.h  Utilities.h
src/include/Components/: BoxCollider.h  Camera.h  Component.h  Renderer.h  Transform.h
src/include/Components/AI/: CharacterAnimations.h  CharacterLogic.h  CharacterMovement.h  CharacterPathfinding.h  CharacterStates.h  Node.h
src/include/Components/Animations/: GameObjectAnimator.h  UIAnimator.h
src/include/Components/Audio/: AudioListener.h  AudioLoader.h  AudioSource.h
src/include/Components/Lights/: DirectionalLight.h  PointLight.h  SpotLight.h
src/include/Components/PhysicsAndColliders/: BoxCollider.h  Rigidbody.h
src/include/Components/Renderers/: Animator.h  Camera.h  CubeMap.h  Drawable.h  Renderer.h
src/include/Components/Renderers/Lights/: DirectionalLight.h  PointLight.h  SpotLight.h
src/include/Components/Scripts/: AudioLoader.h  Crowd.h  Instrument.h  InstrumentSound.h  MainMenu.h  MainMenuManager.h  MusicPattern.h  MusicSession.h  NewGameMenu.h  Opponent.h  OptionsMenu.h  PauseMenu.h  PlayerEquipment.h  PlayerInput.h  PlayerManager.h  PlayerMovement.h  PlayerUI.h  SavePointMenu.h  SavePointTrigger.h  SessionStarter.h  SessionUI.h  ShopMenu.h  ShopTrigger.h
src/include/Components/Scripts/Menus/: ControlsMenu.h  CreditsMenu.h  Dialogue.h  LoadGameMenu.h  MainMenu.h  MainMenuManager.h  MainMenuOptionsMenu.h  MapTrigger.h  OptionsChooseMenu.h  OptionsMenu.h  PauseMenu.h  SavePointMenu.h  SavePointTrigger.h  ShopMenu.h  ShopTrigger.h  Shopkeeper.h
src/include/Components/Scripts/Opponent/: Opponent.h  OpponentMusicSession.h  OpponentSessionStarter.h
src/include/Components/Scripts/Player/: PlayerEquipment.h  PlayerInput.h  PlayerManager.h  PlayerMovement.h  PlayerUI.h
src/include/Components/Scripts/SessionUI/: ClapSessionUI.h  DrumsSessionUI.h  GuitarSessionUI.h  LaunchpadSessionUI.h  SessionUI.h  TrumpetSessionUI.h
src/include/Components/UI/: Button.h  Image.h  Indicator.h  Menu.h  Popup.h  Text.h  UIComponent.h
src/include/EngineComponents/: EngineColliders.h  EngineHID.h  EngineRenderer.h
src/include/EngineManagers/: AIManager.h  AnimationManager.h  AudioManager.h  ColliderManager.h  CollisionManager.h  DataPersistanceManager.h  DebugManager.h  DialogueManager.h  HIDManager.h  HierarchyManager.h  OpponentManager.h  OptionsManager.h  PostProcessingManager.h  RandomnessManager.h  RendererManager.h  SavePointManager.h  SceneManager.h  ShadowManager.h  UIManager.h
src/include/Factiories/: ComponentFactory.h  GameObjectFactory.h
src/include/Factories/: ComponentFactory.h  GameObjectFactory.h  PrefabFactory.h
src/include/GameObjectsAndPrefabs/: GameObject.h  Prefab.h
src/include/GameObjectsAndPrefabs/Prefabs/: CharacterDefault.h  ConeIndicator.h  Die.h  House.h  Indicator.h  InvisibleBlock.h  MainMenuPrefab.h  OpponentPrefab.h  Player.h  SavePoint.h  Shop.h
src/include/HighLevelClasses/: Camera.h  GameObject.h
src/include/Interfaces/: IDataPersistance.h  IStaticSaveable.h  SaveableStaticObject.h
src/include/LowLevelClasses/: Animation.h  AnimationModel.h  AudioLoader.h  Bone.h  FileDataHandler.h  GameData.h  GameObjectData.h  Mesh.h  Model.h  Shader.h  StaticModel.h  StaticObjData.h  StaticObjectData.h
src/include/Other/: FrustumCulling.h  GLMHelper.h
src/include/Shapes/: Cube.h  Plane.h  ShapeObject.h
src/src/: Game.cpp  GloomEngine.cpp  Utilities.cpp
src/src/Components/: BoxCollider.cpp  Camera.cpp  Component.cpp  Component.cpp~  GameObjectAnimator.cpp  GameObjectAnimator.h  Renderer.cpp  Transform.cpp
src/src/Components/AI/: CharacterAnimations.cpp  CharacterLogic.cpp  CharacterMovement.cpp  CharacterPathfinding.cpp
src/src/Components/Animations/: GameObjectAnimator.cpp  UIAnimator.cpp
src/src/Components/Audio/: AudioListener.cpp  AudioLoader.cpp  AudioSource.cpp
src/src/Components/Lights/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
src/src/Components/PhysicsAndColliders/: BoxCollider.cpp  Rigidbody.cpp
src/src/Components/Renderers/: Animator.cpp  Camera.cpp  CubeMap.cpp  Drawable.cpp  Renderer.cpp
src/src/Components/Scripts/: AudioLoader.cpp  Crowd.cpp  Instrument.cpp  InstrumentSound.cpp  InstrumentSound.h  LoadGameMenu.cpp  MainMenu.cpp  MainMenuManager.cpp  MusicPattern.cpp  MusicSession.cpp  NewGameMenu.cpp  Opponent.cpp  OpponentSessionStarter.cpp  OptionsMenu.cpp  PauseMenu.cpp  PlayerEquipment.cpp  PlayerManager.cpp  PlayerMovement.cpp  PlayerUI.cpp  SavePointMenu.cpp  SavePointTrigger.cpp  SessionStarter.cpp  SessionUI.cpp  ShopMenu.cpp  ShopTrigger.cpp
src/src/Components/Scripts/Menus/: CreditsMenu.cpp  (+15 more)
src/src/Components/UI/: Button.cpp  Image.cpp  Indicator.cpp  Menu.cpp  Popup.cpp  Text.cpp  UIComponent.cpp
src/src/EngineComponents/: EngineColliders.cpp  EngineHID.cpp  EngineRenderer.cpp
src/src/EngineManagers/: AIManager.cpp  AnimationManager.cpp  AudioManager.cpp  ColliderManager.cpp  CollisionManager.cpp  DataPersistanceManager.cpp  DebugManager.cpp  DialogueManager.cpp  HIDManager.cpp  HierarchyManager.cpp  OpponentManager.cpp  OptionsManager.cpp  PostProcessingManager.cpp  RandomnessManager.cpp  RendererManager.cpp  SavePointManager.cpp  SceneManager.cpp  ShadowManager.cpp  UIManager.cpp
src/src/Factories/: ComponentFactory.cpp  GameObjectFactory.cpp  PrefabFactory.cpp
src/src/GameObjectsAndPrefabs/: GameObject.cpp  Prefab.cpp  PrefabCharacters.cpp
src/src/GameObjectsAndPrefabs/Prefabs/: CharacterDefault.cpp  ConeIndicator.cpp  Die.cpp  House.cpp  Indicator.cpp  InvisibleBlock.cpp  MainMenuPrefab.cpp  OpponentPrefab.cpp  Player.cpp  SavePoint.cpp  Shop.cpp
src/src/HighLevelClasses/: Camera.cpp  GameObject.cpp
src/src/LowLevelClasses/: Animation.cpp  AnimationModel.cpp  AudioLoader.cpp  Bone.cpp  FileDataHandler.cpp  GameData.cpp  GameObjectData.cpp  Mesh.cpp  Model.cpp  Shader.cpp  StaticModel.cpp  StaticObjData.cpp  StaticObjectData.cpp
src/src/Other/: FrustumCulling.cpp
src/src/Shapes/: Cube.cpp
(+163 files in other folders)
